# rust-algorithm

./: .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/searching/: binary_search.rs  exponential_search.rs  linear_search.rs
src/sorting/: bubble_sort.rs  bucket_sort.rs  cocktail_sort.rs  comb_sort.rs  counting_sort.rs  gnome_sort.rs  heap_sort.rs  merge_sort.rs  mod.rs  odd_even_sort.rs  quick_sort.rs  selection_sort.rs  shell_sort.rs  slow_sort.rs  stooge_sort.rs  test_cases.rs
tests/: quick_sort_test.rs
